feat: added chart category navigation
Implemented chart category navigation through dedicated views.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,22 @@
 /* app global css */
+
+.scrollbar {
+  overflow-y: scroll;
+}
+
+.scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.scrollbar::-webkit-scrollbar-thumb
+{
+	background-color: #0b2349;
+}
