feat: added an area charts category page
Added a missing page for area charts.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,6 +7,7 @@
 .scrollbar::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
 }
 
